Add main menu and 2 more levels